fix submission word wrapping

--- a/sass/src/pleiades.scss
+++ b/sass/src/pleiades.scss
@@ -874,6 +874,8 @@ pre.submission {
   max-height: none;
   overflow-y: scroll;
   display: none;
+  word-wrap: normal;
+  white-space: pre;
 }
 
 .byline {
